完成最新消息文章編輯功能

--- a/fosstp/templates/forum_topic_add.jinja2
+++ b/fosstp/templates/forum_topic_add.jinja2
@@ -39,7 +39,7 @@
         <div class="col-xs-12 col-sm-8 col-sm-offset-2">
           <div class="form-group">
             <label for="description">內容</label>
-            {{ form.content(class_='form-control', id='content', placeholder='內容') }}
+            {{ form.content(class_='form-control', id='content', placeholder='內容', rows=10) }}
           </div>
         </div>
         <div class="col-xs-12 text-center">
