--- a/fosstp/templates/home.jinja2
+++ b/fosstp/templates/home.jinja2
@@ -80,7 +80,7 @@
               </tr>
             </tbody>
           </table>
-          <a href="#" class="btn btn-info btn-xs pull-right">顯示更多...</a>
+          <a href="{{ request.route_path('news') }}" class="btn btn-info btn-xs pull-right">顯示更多...</a>
         </div>
       </div>
       <div class="panel panel-primary">
@@ -158,7 +158,7 @@
               </tr>
             </tbody>
           </table>
-          <a href="#" class="btn btn-info btn-xs pull-right">顯示更多...</a>
+          <a href="{{ request.route_path('forum') }}" class="btn btn-info btn-xs pull-right">顯示更多...</a>
         </div>
       </div>
     </div>
