--- a/fosstp/templates/workshop_edit.jinja2
+++ b/fosstp/templates/workshop_edit.jinja2
@@ -18,7 +18,7 @@
         <div class="col-xs-12 col-sm-8 col-sm-offset-2">
           <div class="form-group">
             <label for="link">Google 行事曆嵌入連結</label>
-            {{ form.link(class_='form-control', id='link', placeholder='Google 行事曆嵌入連結') }}
+            {{ form.link(class_='form-control', id='link', placeholder='Google 行事曆嵌入連結', rows=10) }}
           </div>
         </div>
         <div class="col-xs-12 text-center">
