--- a/fosstp/templates/about.jinja2
+++ b/fosstp/templates/about.jinja2
@@ -6,17 +6,22 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-offset-1 col-sm-10">
-        {% if about %}
-          {{ about.content|safe }}
-        {% endif %}
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">關於本站</h3>
+          </div>
+          <div class="panel-body">
+            {% if about %}
+              {{ about.content|safe }}
+            {% endif %}
+          </div>
+        </div>
       </div>
-    </div>
-    {% if request.group == 'admin' %}
-      <div class="row">
+      {% if request.group == 'admin' %}
         <div class="col-sm-12 text-center">
           <a class="btn btn-primary" href="{{ request.route_path('about_edit') }}">編輯</a>
         </div>
-      </div>
-    {% endif %}
+      {% endif %}
+    </div>
   </div><!-- container -->
 {% endblock content %}
