--- a/fosstp/templates/forum.jinja2
+++ b/fosstp/templates/forum.jinja2
@@ -6,13 +6,20 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-offset-1 col-sm-10">
-        <div class="list-group">
-          {% for forum_category in forum_categories %}
-            <a href="{{ request.route_path('forum_category', id=forum_category.id) }}" class="list-group-item">
-              <h4 class="list-group-item-heading">{{ forum_category.name }}</h4>
-              <p class="list-group-item-text">{{ forum_category.description }}</p>
-            </a>
-          {% endfor %}
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">討論區</h3>
+          </div>
+          <div class="panel-body">
+            <div class="list-group">
+              {% for forum_category in forum_categories %}
+                <a href="{{ request.route_path('forum_category', id=forum_category.id) }}" class="list-group-item">
+                  <h4 class="list-group-item-heading">{{ forum_category.name }}</h4>
+                  <p class="list-group-item-text">{{ forum_category.description }}</p>
+                </a>
+              {% endfor %}
+            </div>
+          </div>
         </div>
       </div>
       <div class="col-sm-offset-1 col-sm-10 text-center">
