--- a/fosstp/templates/forum_topic.jinja2
+++ b/fosstp/templates/forum_topic.jinja2
@@ -71,7 +71,7 @@
           {% if request.user %}
             <div class="form-group">
               <label for="content">新增回應</label>
-              {{ forum_reply_form.content(class_='form-control', id='content', placeholder='內容') }}
+              {{ forum_reply_form.content(class_='form-control', id='content', placeholder='內容', rows=10) }}
             </div>
             <div class="text-center">
               <button type="submit" class="btn btn-primary">新增回應</button>
