--- a/fosstp/templates/base.jinja2
+++ b/fosstp/templates/base.jinja2
@@ -17,7 +17,7 @@
   <div class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a href="{{ 'home'|route_path }}" class="navbar-brand">臺北市自由軟體數位學習資源網</a>
+        <a href="{{ 'home'|route_path }}" class="navbar-brand"><img src="{{ 'fosstp:static/logo.png'|static_path }}" style="margin-top: -8px;"></a>
         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
