--- a/fosstp/templates/link.jinja2
+++ b/fosstp/templates/link.jinja2
@@ -4,6 +4,27 @@
 
 {% block content %}
   <div class="container-fluid">
-    好站連結
+    <div class="row">
+      <div class="col-sm-offset-1 col-sm-10">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">好站連結</h3>
+          </div>
+          <div class="panel-body">
+            <div class="list-group">
+              {% for link in links %}
+                <a href="{{ link.link }}" class="list-group-item">
+                  {{ link.name }}
+                  <span class="pull-right">{{ link.user.name }} {{ link.create_datetime.strftime('%Y-%m-%d %H:%M:%S') }}</span>
+                </a>
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--<div class="col-sm-offset-1 col-sm-10 text-center">
+        <a class="btn btn-primary" href="{{ request.route_path('news_add') }}">新增文章</a>
+      </div>-->
+    </div>
   </div><!-- container -->
 {% endblock content %}
