--- a/fosstp/templates/planet.jinja2
+++ b/fosstp/templates/planet.jinja2
@@ -4,6 +4,19 @@
 
 {% block content %}
   <div class="container-fluid">
-    聯播星球
+    <div class="row">
+      <div class="col-sm-offset-1 col-sm-10">
+        {% for planet_content in planet_contents %}
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title"><a href="{{ planet_content.link }}" target="_blank">{{ planet_content.title }}</a></h3>
+            </div>
+            <div class="panel-body">
+              {{ planet_content.content|safe }}
+            </div>
+          </div>
+        {% endfor   %}
+      </div>
+    </div>
   </div><!-- container -->
 {% endblock content %}
