暫時隱藏下載連結

--- a/fosstp/templates/base.jinja2
+++ b/fosstp/templates/base.jinja2
@@ -44,9 +44,9 @@
           <li class="dropdown{% block share_stats %}{% endblock %}">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-share" aria-hidden="true"></span>資源分享 <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li{% block download_stats %}{% endblock %}>
+              <!--<li{% block download_stats %}{% endblock %}>
                   <a href="{{ 'download'|route_path }}"><span class="glyphicon glyphicon-download" aria-hidden="true"></span> 檔案下載</a>
-              </li>
+              </li>-->
               <li{% block link_stats %}{% endblock %}>
                   <a href="{{ 'link'|route_path }}"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> 好站連結</a>
               </li>
