--- a/fosstp/templates/home.jinja2
+++ b/fosstp/templates/home.jinja2
@@ -28,8 +28,14 @@
           <div class="list-group">
             {% for each_news in news_list %}
               <a href="{{ request.route_path('news_show', id=each_news.id) }}" class="list-group-item">
-                {{ each_news.title }}
-                <span class="pull-right">{{ each_news.user.name }} {{ each_news.create_datetime.strftime('%Y-%m-%d %H:%M:%S') }}</span>
+                <div class="row">
+                  <div class="col-xs-12 col-sm-6">
+                    {{ each_news.title }}
+                  </div>
+                  <div class="col-xs-12 col-sm-6">
+                    <span class="pull-right">{{ each_news.user.name }} {{ each_news.create_datetime.strftime('%Y-%m-%d %H:%M:%S') }}</span>
+                  </div>
+                </div>
               </a>
             {% endfor %}
           </div>
@@ -44,8 +50,14 @@
           <div class="list-group">
             {% for each_forum_topic in forum_topic_list %}
               <a href="{{ request.route_path('forum_topic', id=each_forum_topic.id) }}" class="list-group-item">
-                {{ each_forum_topic.title }}
-                <span class="pull-right">{{ each_forum_topic.user.name }} {{ each_forum_topic.create_datetime.strftime('%Y-%m-%d %H:%M:%S') }}</span>
+                <div class="row">
+                  <div class="col-xs-12 col-sm-6">
+                    {{ each_forum_topic.title }}
+                  </div>
+                  <div class="col-xs-12 col-sm-6">
+                    <span class="pull-right">{{ each_forum_topic.user.name }} {{ each_forum_topic.create_datetime.strftime('%Y-%m-%d %H:%M:%S') }}</span>
+                  </div>
+                </div>
               </a>
             {% endfor %}
           </div>
