--- a/fosstp/templates/link.jinja2
+++ b/fosstp/templates/link.jinja2
@@ -14,8 +14,14 @@
             <div class="list-group">
               {% for link in links %}
                 <a href="{{ link.link }}" class="list-group-item">
-                  {{ link.name }}
-                  <span class="pull-right">{{ link.user.name }} {{ link.create_datetime.strftime('%Y-%m-%d %H:%M:%S') }}</span>
+                  <div class="row">
+                    <div class="col-xs-12 col-sm-6">
+                      {{ link.name }}
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                      <span class="pull-right">{{ link.user.name }} {{ link.create_datetime.strftime('%Y-%m-%d %H:%M:%S') }}</span>
+                    </div>
+                  </div>
                 </a>
               {% endfor %}
             </div>
