--- a/fosstp/templates/news.jinja2
+++ b/fosstp/templates/news.jinja2
@@ -13,10 +13,16 @@
           <div class="panel-body">
             <div class="list-group">
               {% for each_news in news %}
-                <a href="{{ request.route_path('news_show', id=each_news.id) }}" class="list-group-item">
-                  {{ each_news.title }}
-                  <span class="pull-right">{{ each_news.user.name }} {{ each_news.create_datetime.strftime('%Y-%m-%d %H:%M:%S') }}</span>
-                </a>
+               <a href="{{ request.route_path('news_show', id=each_news.id) }}" class="list-group-item">
+                 <div class="row">
+                   <div class="col-xs-12 col-sm-6">
+                     {{ each_news.title }}
+                   </div>
+                   <div class="col-xs-12 col-sm-6">
+                     <span class="pull-right">{{ each_news.user.name }} {{ each_news.create_datetime.strftime('%Y-%m-%d %H:%M:%S') }}</span>
+                   </div>
+                 </div>
+               </a>
               {% endfor %}
             </div>
           </div>
